...
            ),
          ],
        ),
        child: Card(
          child: ListTile(
            title: Text(trip.name.getOrCrash(), key: const Key('TripName')),
            subtitle: Text(buildDescription(), key: const Key('TripDescription')),
            trailing: const Icon(Icons.more_vert),
            isThreeLine: true,
          ),
        ),
      ),
    );
...
